--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.19",
+    "@mdx-js/react": "^1.6.19",
     "babel-plugin-styled-components": "^1.11.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-layout": "^1.3.13",
     "gatsby-plugin-manifest": "^2.5.1",
+    "gatsby-plugin-mdx": "^1.3.1",
     "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.0",
     "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-source-datocms": "^2.5.7",
     "gatsby-source-filesystem": "^2.4.0",
     "gatsby-transformer-sharp": "^2.5.21",
     "prop-types": "^15.7.2",
