--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "gatsby-plugin-sharp": "^2.7.0",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-datocms": "^2.5.7",
+    "gatsby-source-dev": "^0.1.4",
     "gatsby-source-filesystem": "^2.4.0",
     "gatsby-transformer-sharp": "^2.5.21",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "slugify": "^1.4.6",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
