--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-config": "^1.0.7",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.13",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-mdx": "^1.3.1",
