--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.6.19",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.5",
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-config": "^1.0.7",
